--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">kom_ihag_lista</string>
-    <string name="convert">Convert</string>
+    <string name="app_name">Currency Converter</string>
+    <string name="tConvert">Convert</string>
+    <string name="tTo">To</string>
 </resources>
